feat: Edit modifier screen
Added the edit modifier screen in which modifiers can be edited. However, the screen's UI still needs improvements.